Mise à jour de l'index.html avec une image au lieu du dégradé de couleurs

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 <h2 class="section-title">À propos</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <!-- Image stylisée avec des couleurs -->
-                        <div style="width: 300px; height: 300px; background: linear-gradient(45deg, #3498db, #2ecc71, #e74c3c); border-radius: var(--border-radius);"></div>
+                        <!-- Image stylisée remplaçant le dégradé de couleurs -->
+                        <img src="images/about-image.svg" alt="Design graphique abstrait" width="300" height="300">
                     </div>
                     <div class="about-text">
                         <h3>Ma Philosophie</h3>
