Mise à jour de l'index.html avec une vraie photo de profil

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 <h2 class="section-title">À propos</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <!-- Image stylisée remplaçant le dégradé de couleurs -->
-                        <img src="images/about-image.svg" alt="Design graphique abstrait" width="300" height="300">
+                        <!-- Image de profil -->
+                        <img src="images/galerie/IMG_E1025.JPG" alt="Portrait de profil" width="300" height="300" style="object-fit: cover; border-radius: var(--border-radius);">
                     </div>
                     <div class="about-text">
                         <h3>Ma Philosophie</h3>
