Mise à jour des images réelles dans la galerie

--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -305,7 +305,7 @@
                     </div>
                     
                     <div class="gallery-item" data-category="selfies">
-                        <img src="../images/galerie/image.png" alt="Réflexion pensive" class="gallery-image">
+                        <img src="../images/galerie/julien.png" alt="Réflexion pensive" class="gallery-image">
                         <div class="gallery-item-content">
                             <h3>Réflexion pensive</h3>
                             <p>Un selfie présentant un moment de réflexion et d'introspection.</p>
