Correction du problème d'affichage des images dans la galerie

--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie de Photos - Mon Site Web</title>
-    <!-- Intégration des polices Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -106,12 +105,12 @@
             height: 100%;
             background-color: rgba(0, 0, 0, 0.8);
             z-index: 1000;
-            justify-content: center;
-            align-items: center;
         }
         
         .modal.show {
-            display: flex;
+            display: flex !important;
+            justify-content: center;
+            align-items: center;
         }
         
         .modal-content {
