--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -408,12 +408,14 @@
             
             // Fermer le modal
             closeBtn.addEventListener('click', function() {
+                modal.style.display = 'none';
                 modal.classList.remove('show');
             });
             
             // Fermer le modal en cliquant à l'extérieur
             window.addEventListener('click', function(event) {
                 if (event.target === modal) {
+                    modal.style.display = 'none';
                     modal.classList.remove('show');
                 }
             });
